--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <body>
-<a href="restaurants-mocks/choose-your-template.html">1</a>
-<a href="restaurants-mocks/generate-page.html">2</a>
-<a href="restaurants-mocks/restaurant-info.html">3</a>
+
+<a href="restaurants-mocks/restaurant-info.html">Restaurant info</a>
+<a href="restaurants-mocks/choose-your-template.html">Choose your template</a>
+<a href="restaurants-mocks/generate-page.html">Generate page</a>
+
+
 </body>
 </html>
